force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/Temporal_Tripulacion_Bautismos__c.object-meta.xml
<CustomObject>
    <label>Temporal Tripulacion Bautismo</label>
    <nameField>
        <label>Temporal Tripulacion Bautismo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Tripulacion Bautismos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>