force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Temporal Tripulacion Bautismos</relationshipLabel>
    <relationshipName>Temporal_Tripulacion_Bautismos</relationshipName>
    <type>Lookup</type>
</CustomField>