force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/INFO_AGE__c.field-meta.xml
<CustomField>
    <fullName>INFO_AGE__c</fullName>
    <label>INFO_AGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>