force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/INFO_OBS__c.field-meta.xml
<CustomField>
    <fullName>INFO_OBS__c</fullName>
    <label>INFO_OBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>