force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/SALDO_COBPAG__c.field-meta.xml
<CustomField>
    <fullName>SALDO_COBPAG__c</fullName>
    <label>SALDO_COBPAG</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>