force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/TP_EQUIPO__c.field-meta.xml
<CustomField>
    <fullName>TP_EQUIPO__c</fullName>
    <label>TP_EQUIPO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>