force-app/main/default/objects/Temporal_Tripulacion_Bautismos__c/fields/TP_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>TP_TIPALU__c</fullName>
    <label>TP_TIPALU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>